--- a/src/main/webapp/html/home.html
+++ b/src/main/webapp/html/home.html
@@ -14,7 +14,10 @@
 
  <!-- Top row with form-->
 <div class="row">
-	 <div class="col-2">
+	<div class="col-2">
+		<a th:href="@{/ui/brand}" title="Brand"> Brand </i> </a>
+	</div>
+	<div class="col-2">
 	 	<a th:href="@{/ui/employee}" title="Employees"> <i class="fas fa-users"></i> </a>
 	 </div>	
 	 <div class="col-2">
