--- a/src/main/webapp/html/snippets.html
+++ b/src/main/webapp/html/snippets.html
@@ -56,6 +56,9 @@
         <a class="nav-link" th:href="@{/ui/employee}">Employees</a>
       </li>
       <li class="nav-item">
+        <a class="nav-link" th:href="@{/ui/brand}">Brands</a>
+      </li>
+      <li class="nav-item">
         <a class="nav-link" th:href="@{/ui/admin}">Admin</a>
       </li>
     </ul>
