--- a/src/main/webapp/html/brand.html
+++ b/src/main/webapp/html/brand.html
@@ -28,7 +28,7 @@
 			      <input type="text" class="form-control" name="category" id="inputCategoryName" placeholder="enter category name">
 			    </div>
 			  </div>
-			  <button type="button" class="btn btn-primary" id="add-employee">Add</button>
+			  <button type="button" class="btn btn-primary" id="add-brand">Add</button>
 			  &nbsp;
 			  <button type="button" class="btn btn-primary" id="refresh-data">Refresh</button>
 			  &nbsp;
@@ -46,7 +46,7 @@
 
  <!-- Table -->
  <div class="col-12">
-	<table class="table table-striped" id="employee-table">
+	<table class="table table-striped" id="brand-table">
 	  <thead>
 	    <tr>
 	      <th scope="col">ID</th>
@@ -81,7 +81,7 @@
 </div>
 
 <!-- Employee Edit Modal -->
-<div class="modal" tabindex="-1" role="dialog" id="edit-employee-modal">
+<div class="modal" tabindex="-1" role="dialog" id="edit-brand-modal">
   <div class="modal-dialog" role="document">
     <div class="modal-content">
       <div class="modal-header">
@@ -91,7 +91,7 @@
         </button>
       </div>
       <div class="modal-body">
-			<form class="form-inline" id="employee-edit-form">
+			<form class="form-inline" id="brand-edit-form">
 			  <div class="form-group">
 			    <label for="inputBrandName" class="col-sm-2 col-form-label">Brand Name</label>
 			    <div class="col-sm-10">
@@ -109,7 +109,7 @@
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
-        <button type="button" class="btn btn-primary" id="update-employee">Update</button>
+        <button type="button" class="btn btn-primary" id="update-brand">Update</button>
       </div>
     </div>
   </div>
@@ -117,12 +117,12 @@
 
 
 <!-- Employee Edit Modal -->
-<div class="modal" tabindex="-1" role="dialog" id="upload-employee-modal">
+<div class="modal" tabindex="-1" role="dialog" id="upload-brand-modal">
   <div class="modal-dialog" role="document">
     <div class="modal-content">
       
       <div class="modal-header">
-        <h5 class="modal-title">Upload Employee</h5>
+        <h5 class="modal-title">Upload Brand and Category</h5>
         <button type="button" class="close" data-dismiss="modal" aria-label="Close">
           <span aria-hidden="true">&times;</span>
         </button>
@@ -130,8 +130,8 @@
       
       <div class="modal-body">
       	<div class="employee-file">
-		  <input type="file" class="custom-file-input" id="employeeFile">
-		  <label class="custom-file-label" for="employeeFile" id="employeeFileName">Choose file</label>
+		  <input type="file" class="custom-file-input" id="brandFile">
+		  <label class="custom-file-label" for="brandFile" id="brandFileName">Choose file</label>
 		</div>
 		<a th:href="@{/sample/employee.tsv}" target="_blank">Download Sample</a> 
 		<br>
