[refractor] - added dto layer and fixed bugs

--- a/src/main/webapp/html/product.html
+++ b/src/main/webapp/html/product.html
@@ -23,11 +23,17 @@
 			    </div>
 			  </div>
 			  <div class="form-group">
-			    <label for="inputBrandCategory" class="col-sm-2 col-form-label">Brand-Category</label>
+			    <label for="inputBrand" class="col-sm-2 col-form-label">Brand Name</label>
 			    <div class="col-sm-10">
-			      <input type="text" class="form-control" name="brand_category_id" id="inputBrandCategory" placeholder="enter brand-category">
+			      <input type="text" class="form-control" name="brand" id="inputBrand" placeholder="enter brand Name">
 			    </div>
 			  </div>
+				<div class="form-group">
+					<label for="inputCategory" class="col-sm-2 col-form-label">Category</label>
+					<div class="col-sm-10">
+						<input type="text" class="form-control" name="category" id="inputCategory" placeholder="enter category">
+					</div>
+				</div>
 				<div class="form-group">
 					<label for="inputName" class="col-sm-2 col-form-label"> Product Name</label>
 					<div class="col-sm-10">
@@ -64,7 +70,8 @@
 	    <tr>
 	      <th scope="col">ID</th>
 	      <th scope="col">Barcode</th>
-	      <th scope="col">Brand-Category-Id</th>
+			<th scope="col">Brand</th>
+	      <th scope="col">Category</th>
 		  <th scope="col">Name</th>
 		  <th scope="col">Price (INR) </th>
 
@@ -115,11 +122,17 @@
 			    </div>
 			  </div>
 			  <div class="form-group">
-			    <label for="inputBrandCategory" class="col-sm-2 col-form-label">brand-category-id</label>
+			    <label for="inputBrand" class="col-sm-2 col-form-label">brand</label>
 			    <div class="col-sm-10">
-			      <input type="text" class="form-control" name="brand_category_id" placeholder="enter brand-category-id">
+			      <input type="text" class="form-control" name="brand" placeholder="enter brand name">
 			    </div>
 			  </div>
+				<div class="form-group">
+					<label for="inputCategory" class="col-sm-2 col-form-label">category</label>
+					<div class="col-sm-10">
+						<input type="text" class="form-control" name="category" placeholder="enter category">
+					</div>
+				</div>
 				<div class="form-group">
 					<label for="inputName" class="col-sm-2 col-form-label">Product Name</label>
 					<div class="col-sm-10">
