[update] - added upload tsv feature in brand and product

--- a/src/main/webapp/html/brand.html
+++ b/src/main/webapp/html/brand.html
@@ -154,6 +154,8 @@
 <footer th:replace="snippets.html :: name_footer"></footer>
 
 <script th:src="@{/static/brand.js}"/></script>
+<script src="bootstrap-notify.js"></script>
+
 
 </body>	
 
