--- a/src/main/webapp/html/index.html
+++ b/src/main/webapp/html/index.html
@@ -25,6 +25,7 @@
 </div> <!--Container-->
 
 <footer th:replace="snippets.html :: name_footer"></footer>
+<script src="bootstrap-notify.js"></script>
 
 </body>
 
