--- a/src/main/webapp/html/product.html
+++ b/src/main/webapp/html/product.html
@@ -195,6 +195,7 @@
 <footer th:replace="snippets.html :: name_footer"></footer>
 
 <script th:src="@{/static/product.js}"/></script>
+<script src="bootstrap-notify.js"></script>
 
 </body>	
 
