--- a/src/main/webapp/html/snippets.html
+++ b/src/main/webapp/html/snippets.html
@@ -59,6 +59,9 @@
         <a class="nav-link" th:href="@{/ui/product}">Product</a>
       </li>
       <li class="nav-item">
+        <a class="nav-link" th:href="@{/ui/inventory}">Inventory</a>
+      </li>
+      <li class="nav-item">
         <a class="nav-link" th:href="@{/ui/admin}">Admin</a>
       </li>
     </ul>
