--- a/src/main/webapp/html/product.html
+++ b/src/main/webapp/html/product.html
@@ -118,7 +118,7 @@
 			  <div class="form-group">
 			    <label for="inputBarcode" class="col-sm-2 col-form-label">Barcode</label>
 			    <div class="col-sm-10">
-			      <input type="text" class="form-control" name="barcode" placeholder="enter barcode">
+			      <input type="text" class="form-control" name="barcode" placeholder="enter barcode" readonly>
 			    </div>
 			  </div>
 			  <div class="form-group">
@@ -140,7 +140,7 @@
 					</div>
 				</div>
 				<div class="form-group">
-					<label for="inputMrp" class="col-sm-2 col-form-label">Category</label>
+					<label for="inputMrp" class="col-sm-2 col-form-label">Price (INR)</label>
 					<div class="col-sm-10">
 						<input type="text" class="form-control" name="mrp" placeholder="0.0">
 					</div>
