--- a/src/main/webapp/html/brand.html
+++ b/src/main/webapp/html/brand.html
@@ -49,31 +49,13 @@
 	<table class="table table-striped" id="brand-table">
 	  <thead>
 	    <tr>
-	      <th scope="col">ID</th>
+		  <th scope="col">Sl No.</th>
 	      <th scope="col">Brand</th>
 	      <th scope="col">Category</th>
 	      <th scope="col">Actions</th>
 	    </tr>
 	  </thead>
 	  <tbody>
-	    <tr>
-	      <td>1</td>
-	      <td>Romil Jain</td>
-	      <td>30</td>
-	      <td>Edit | Delete</td>
-	    </tr>
-	    <tr>
-	      <td>2</td>
-	      <td>Rajul Jain</td>
-	      <td>31</td>
-	      <td>Edit | Delete</td>
-	    </tr>
-	    <tr>
-	      <td>3</td>
-	      <td>Anaisha Jain</td>
-	      <td>7</td>
-	      <td>Edit | Delete</td>
-	    </tr>
 	  </tbody>
 	</table>
 
@@ -130,20 +112,25 @@
       
       <div class="modal-body">
       	<div class="employee-file">
-		  <input type="file" class="custom-file-input" id="brandFile">
+			<form id="import-form" action="" method="post" enctpye="multipart/form-data">
+		  <input type="file" name="file_name" class="custom-file-input" id="brandFile">
+			</form>
 		  <label class="custom-file-label" for="brandFile" id="brandFileName">Choose file</label>
 		</div>
-		<a th:href="@{/sample/employee.tsv}" target="_blank">Download Sample</a> 
+		<a th:href="@{/sample/brandSample.tsv}" target="_blank">Download Sample</a>
 		<br>
-		Rows: <span id="rowCount">0</span>, 
-		Processed: <span id="processCount">0</span>, 
-		Errors: <span id="errorCount">0</span>
+<!--		Rows: <span id="rowCount">0</span>, -->
+<!--		Processed: <span id="processCount">0</span>, -->
+<!--		Errors: <span id="errorCount">0</span>-->
       </div>
       
       <div class="modal-footer">
         <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
         <button type="button" class="btn btn-primary" id="process-data">Upload</button>
-        <button type="button" class="btn btn-warning" id="download-errors">Download Errors</button>
+		  <a th:href="@{/error/errorFile.tsv}" target="_blank">
+			  <button type="button" class="btn btn-warning" id="download-errors" disabled>Download Errors</button>
+		  </a>
+
       </div>
     </div>
   </div>
@@ -154,7 +141,6 @@
 <footer th:replace="snippets.html :: name_footer"></footer>
 
 <script th:src="@{/static/brand.js}"/></script>
-<script src="bootstrap-notify.js"></script>
 
 
 </body>	
