--- a/src/main/webapp/html/inventory.html
+++ b/src/main/webapp/html/inventory.html
@@ -16,20 +16,20 @@
     <div class="row">
         <div class="col-12">
             <form class="form-inline" id="inventory-form">
-                <div class="form-group">
-                    <label for="inputBarcode" class="col-sm-2 col-form-label">Barcode</label>
-                    <div class="col-sm-10">
-                        <input type="text" class="form-control" name="barcode" id="inputBarcode" placeholder="enter barcode">
-                    </div>
-                </div>
-                <div class="form-group">
-                    <label for="inputQuantity" class="col-sm-2 col-form-label">Quantity</label>
-                    <div class="col-sm-10">
-                        <input type="number" step = "1" class="form-control" name="quantity" id="inputQuantity" placeholder="enter quantity">
-                    </div>
-                </div>
-                <button type="button" class="btn btn-primary" id="add-inventory">Add</button>
-                &nbsp;
+<!--                <div class="form-group">-->
+<!--                    <label for="inputBarcode" class="col-sm-2 col-form-label">Barcode</label>-->
+<!--                    <div class="col-sm-10">-->
+<!--                        <input type="text" class="form-control" name="barcode" id="inputBarcode" placeholder="enter barcode">-->
+<!--                    </div>-->
+<!--                </div>-->
+<!--                <div class="form-group">-->
+<!--                    <label for="inputQuantity" class="col-sm-2 col-form-label">Quantity</label>-->
+<!--                    <div class="col-sm-10">-->
+<!--                        <input type="number" step = "1" class="form-control" name="quantity" id="inputQuantity" placeholder="enter quantity">-->
+<!--                    </div>-->
+<!--                </div>-->
+<!--                <button type="button" class="btn btn-primary" id="add-inventory">Add</button>-->
+<!--                &nbsp;-->
                 <button type="button" class="btn btn-primary" id="refresh-data">Refresh</button>
                 &nbsp;
                 <button type="button" class="btn btn-primary" id="upload-data">Upload</button>
@@ -49,38 +49,55 @@
             <table class="table table-striped" id="inventory-table">
                 <thead>
                 <tr>
-                    <th scope="col">Id</th>
+                    <th scope="col">Sl No.</th>
                     <th scope="col">Barcode</th>
                     <th scope="col">Quantity</th>
                     <th scope="col">Actions</th>
                 </tr>
                 </thead>
                 <tbody>
-                <tr>
-                    <td>1</td>
-                    <td>Romil Jain</td>
-                    <td>30</td>
-                    <td>Edit | Delete</td>
-                </tr>
-                <tr>
-                    <td>2</td>
-                    <td>Rajul Jain</td>
-                    <td>31</td>
-                    <td>Edit | Delete</td>
-                </tr>
-                <tr>
-                    <td>3</td>
-                    <td>Anaisha Jain</td>
-                    <td>7</td>
-                    <td>Edit | Delete</td>
-                </tr>
                 </tbody>
             </table>
 
         </div>
     </div>
 
-    <!-- Employee Edit Modal -->
+    <!-- Inventory Add Modal -->
+    <div class="modal" tabindex="-1" role="dialog" id="add-inventory-modal">
+        <div class="modal-dialog" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title">Add to Inventory</h5>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+                <div class="modal-body">
+                    <form class="form-inline" id="inventory-add-form">
+                        <div class="form-group">
+                            <label for="inputBarcode" class="col-sm-2 col-form-label">Barcode</label>
+                            <div class="col-sm-10">
+                                <input type="text" class="form-control" name="barcode" id = "inputBarcode" placeholder="enter barcode" readonly>
+                            </div>
+                        </div>
+                        <div class="form-group">
+                            <label for="inputQuantity" class="col-sm-2 col-form-label">Quantity</label>
+                            <div class="col-sm-10">
+                                <input type="number" step = "1" class="form-control" name="quantity" id="inputQuantity" placeholder="enter quantity">
+                            </div>
+                        </div>
+                        <input type="hidden" name="id" >
+                    </form>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
+                    <button type="button" class="btn btn-primary" id="add-inventory">Add Quantity</button>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <!-- Inventory Edit Modal -->
     <div class="modal" tabindex="-1" role="dialog" id="edit-inventory-modal">
         <div class="modal-dialog" role="document">
             <div class="modal-content">
@@ -101,7 +118,7 @@
                         <div class="form-group">
                             <label for="inputQuantity" class="col-sm-2 col-form-label">Quantity</label>
                             <div class="col-sm-10">
-                                <input type="text" step = "1" class="form-control" name="quantity" placeholder="enter quantity">
+                                <input type="number" step = "1" class="form-control" name="quantity"  placeholder="enter quantity">
                             </div>
                         </div>
                         <input type="hidden" name="id" >
@@ -109,7 +126,7 @@
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
-                    <button type="button" class="btn btn-primary" id="update-inventory">Update</button>
+                    <button type="button" class="btn btn-primary" id="update-inventory">Edit</button>
                 </div>
             </div>
         </div>
@@ -133,17 +150,19 @@
                         <input type="file" class="custom-file-input" id="inventoryFile">
                         <label class="custom-file-label" for="inventoryFile" id="inventoryFileName">Choose file</label>
                     </div>
-                    <a th:href="@{/sample/employee.tsv}" target="_blank">Download Sample</a>
+                    <a th:href="@{/sample/inventorySample.tsv}" target="_blank">Download Sample</a>
                     <br>
-                    Rows: <span id="rowCount">0</span>,
-                    Processed: <span id="processCount">0</span>,
-                    Errors: <span id="errorCount">0</span>
+<!--                    Rows: <span id="rowCount">0</span>,-->
+<!--                    Processed: <span id="processCount">0</span>,-->
+<!--                    Errors: <span id="errorCount">0</span>-->
                 </div>
 
                 <div class="modal-footer">
                     <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
                     <button type="button" class="btn btn-primary" id="process-data">Upload</button>
-                    <button type="button" class="btn btn-warning" id="download-errors">Download Errors</button>
+                    <a th:href="@{/error/errorFile.tsv}" target="_blank">
+                        <button type="button" class="btn btn-warning" id="download-errors" disabled>Download Errors</button>
+                    </a>
                 </div>
             </div>
         </div>
