--- a/src/main/webapp/html/inventory.html
+++ b/src/main/webapp/html/inventory.html
@@ -6,37 +6,17 @@
 
 <body>
 
-<nav th:replace="snippets.html :: name_app_navbar"></nav>
+<nav th:replace="snippets.html :: site_nav_bar_imp"></nav>
 
 <div class="container">
 
-    <h3>Inventory Details</h3>
+    <h3 class="inventory-header">Inventory Details
 
-    <!-- Top row with form-->
-    <div class="row">
-        <div class="col-12">
-            <form class="form-inline" id="inventory-form">
-<!--                <div class="form-group">-->
-<!--                    <label for="inputBarcode" class="col-sm-2 col-form-label">Barcode</label>-->
-<!--                    <div class="col-sm-10">-->
-<!--                        <input type="text" class="form-control" name="barcode" id="inputBarcode" placeholder="enter barcode">-->
-<!--                    </div>-->
-<!--                </div>-->
-<!--                <div class="form-group">-->
-<!--                    <label for="inputQuantity" class="col-sm-2 col-form-label">Quantity</label>-->
-<!--                    <div class="col-sm-10">-->
-<!--                        <input type="number" step = "1" class="form-control" name="quantity" id="inputQuantity" placeholder="enter quantity">-->
-<!--                    </div>-->
-<!--                </div>-->
-<!--                <button type="button" class="btn btn-primary" id="add-inventory">Add</button>-->
-<!--                &nbsp;-->
-                <button type="button" class="btn btn-primary" id="refresh-data">Refresh</button>
+                <button type="button" class="btn btn-primary inventory-header-child" id="refresh-data">Refresh</button>
                 &nbsp;
-                <button type="button" class="btn btn-primary" id="upload-data">Upload</button>
-            </form>
-        </div>
-    </div>
+                <button type="button" class="btn btn-primary inventory-header-child" id="upload-data">Upload</button>
 
+    </h3>
 
     <!-- Blank Row -->
     <div class="row">
