--- a/src/main/webapp/html/login.html
+++ b/src/main/webapp/html/login.html
@@ -2,48 +2,65 @@
 
 <html lang="en">
 
-<head th:replace="snippets.html :: name_head"></head>
+<head th:replace="snippets.html :: name_head_login"></head>
 
 <body>
 
-<nav th:replace="snippets.html :: name_site_navbar"></nav>
+<!--<nav th:replace="snippets.html :: name_site_navbar"></nav>-->
 
 
-<div class="container">
+<!--<div class="container">-->
 
-<div class="row">
-<div class="col-6">
-	
-	<div class="card">
-  	<div class="card-header">
-    	Login
-  	</div>
-  	<div class="card-body">
+<!--<div class="row">-->
+<!--<div class="col-6">-->
+<!--	-->
+<!--	<div class="card">-->
+<!--  	<div class="card-header">-->
+<!--    	Login-->
+<!--  	</div>-->
+<!--  	<div class="card-body">-->
+<!--		<form class="form" id="login-form" method="POST" th:action="@{/session/login}">-->
+<!--			<div class="form-group">-->
+<!--				<label for="email" class="col-sm-10 col-form-label">Email</label>-->
+<!--			    <div class="col-sm-10">-->
+<!--			      <input type="text" class="form-control" name="email" id="email" placeholder="enter email">-->
+<!--			    </div>-->
+<!--			</div>-->
+<!--			<div class="form-group">-->
+<!--			    <label for="password" class="col-sm-10 col-form-label">Password</label>-->
+<!--			    <div class="col-sm-10">-->
+<!--			      <input type="text" class="form-control" name="password" id="password" placeholder="password">-->
+<!--			    </div>-->
+<!--			</div>-->
+<!--			<button type="submit" class="btn btn-primary" id="login">Go</button>-->
+<!--		</form>-->
+<!--	</div>-->
+<!--	-->
+<!--	</div>-->
+<!--	-->
+<!--	-->
+
+<!--</div> &lt;!&ndash; Col &ndash;&gt;-->
+<!--</div> &lt;!&ndash; Row &ndash;&gt;-->
+
+<!--</div> &lt;!&ndash; Container&ndash;&gt;-->
+
+<div class="full-screen-container">
+	<div class="login-container">
+		<h3 class="login-title">Login to POS Application</h3>
 		<form class="form" id="login-form" method="POST" th:action="@{/session/login}">
-			<div class="form-group">
-				<label for="email" class="col-sm-10 col-form-label">Email</label>
-			    <div class="col-sm-10">
-			      <input type="text" class="form-control" name="email" id="email" placeholder="enter email">
-			    </div>
+			<div class="input-group">
+				<label for="email">Email</label>
+				<input type="email" name="email" id="email" placeholder="enter email"/>
 			</div>
-			<div class="form-group">
-			    <label for="password" class="col-sm-10 col-form-label">Password</label>
-			    <div class="col-sm-10">
-			      <input type="text" class="form-control" name="password" id="password" placeholder="password">
-			    </div>
+			<div class="input-group">
+				<label for="password">Password</label>
+				<input type="password" id="password" name="password" placeholder="password"/>
 			</div>
-			<button type="submit" class="btn btn-primary" id="login">Go</button>
+			<button type="submit" id="login" class="login-button">Sign In</button>
 		</form>
 	</div>
-	
-	</div>
-	
-	
-
-</div> <!-- Col -->
-</div> <!-- Row -->
-
-</div> <!-- Container-->
+</div>
 
 <footer th:replace="snippets.html :: name_footer"></footer>
 
