--- a/src/main/webapp/html/logout.html
+++ b/src/main/webapp/html/logout.html
@@ -4,7 +4,7 @@
 
 <body>
 
-<nav th:replace="snippets.html :: name_site_navbar"></nav>
+<nav th:replace="snippets.html :: site_nav_bar_imp"></nav>
 
 
 <div class="container">
