--- a/src/main/webapp/html/order.html
+++ b/src/main/webapp/html/order.html
@@ -6,7 +6,7 @@
 
 <body>
 
-<nav th:replace="snippets.html :: name_app_navbar"></nav>
+<nav th:replace="snippets.html :: site_nav_bar_imp"></nav>
 
 <div class="container">
 
