--- a/src/main/webapp/html/product.html
+++ b/src/main/webapp/html/product.html
@@ -6,55 +6,63 @@
 
 <body>
 
-<nav th:replace="snippets.html :: name_app_navbar"></nav>
+<nav th:replace="snippets.html :: site_nav_bar_imp"></nav>
 
 <div class="container">
 
-<h3>Product Details</h3>
+<h3 class="product-header">Product Details
+	<button type="button" class="btn btn-primary product-header-child" data-toggle="modal" data-target="#addProduct">	Add	<i class="fa fa-plus " ></i></button>
+	<button type="button" class="btn btn-primary product-header-child" id="upload-data">	Upload    <i class="fa fa-upload" ></i>
+	</button>
+	<button type="button" class="btn btn-primary product-header-child" id="refresh-data">Refresh <i class="fa fa-refresh"></i></button>
+</h3>
 
  <!-- Top row with form-->
- <div class="row">
-	 <div class="col-12">
-			<form class="form-inline" id="product-form">
-			  <div class="form-group">
-			    <label for="inputBarcode" class="col-sm-2 col-form-label">Barcode</label>
-			    <div class="col-sm-10">
-			      <input type="text" class="form-control" name="barcode" id="inputBarcode" placeholder="enter barcode">
-			    </div>
-			  </div>
-			  <div class="form-group">
-			    <label for="inputBrand" class="col-sm-2 col-form-label">Brand Name</label>
-			    <div class="col-sm-10">
-			      <input type="text" class="form-control" name="brand" id="inputBrand" placeholder="enter brand Name">
-			    </div>
-			  </div>
-				<div class="form-group">
-					<label for="inputCategory" class="col-sm-2 col-form-label">Category</label>
-					<div class="col-sm-10">
-						<input type="text" class="form-control" name="category" id="inputCategory" placeholder="enter category">
-					</div>
-				</div>
-				<div class="form-group">
-					<label for="inputName" class="col-sm-2 col-form-label"> Product Name</label>
-					<div class="col-sm-10">
-						<input type="text" class="form-control" name="name" id="inputName" placeholder="enter product name">
-					</div>
-				</div>
-				<div class="form-group">
-					<label for="inputMrp" class="col-sm-2 col-form-label">Price (INR) </label>
-					<div class="col-sm-10">
-						<input type="number" class="form-control" name="mrp" id="inputMrp" placeholder="0.0">
-					</div>
-				</div>
+<!-- <div class="row">-->
+<!--	 <div class="col-12">-->
+<!--			<form class="form-inline" id="product-form">-->
+<!--			  <div class="form-group">-->
+<!--			    <label for="inputBarcode" class="col-sm-2 col-form-label">Barcode</label>-->
+<!--			    <div class="col-sm-10">-->
+<!--			      <input type="text" class="form-control" name="barcode" id="inputBarcode" placeholder="enter barcode">-->
+<!--			    </div>-->
+<!--			  </div>-->
+<!--			  <div class="form-group">-->
+<!--			    <label for="inputBrand" class="col-sm-2 col-form-label">Brand Name</label>-->
+<!--			    <div class="col-sm-10">-->
+<!--			      <input type="text" class="form-control" name="brand" id="inputBrand" placeholder="enter brand Name">-->
+<!--			    </div>-->
+<!--			  </div>-->
+<!--				<div class="form-group">-->
+<!--					<label for="inputCategory" class="col-sm-2 col-form-label">Category</label>-->
+<!--					<div class="col-sm-10">-->
+<!--						<input type="text" class="form-control" name="category" id="inputCategory" placeholder="enter category">-->
+<!--					</div>-->
+<!--				</div>-->
+<!--				<div class="form-group">-->
+<!--					<label for="inputName" class="col-sm-2 col-form-label"> Product Name</label>-->
+<!--					<div class="col-sm-10">-->
+<!--						<input type="text" class="form-control" name="name" id="inputName" placeholder="enter product name">-->
+<!--					</div>-->
+<!--				</div>-->
+<!--				<div class="form-group">-->
+<!--					<label for="inputMrp" class="col-sm-2 col-form-label">Price (INR) </label>-->
+<!--					<div class="col-sm-10">-->
+<!--						<input type="number" class="form-control" name="mrp" id="inputMrp" placeholder="0.0">-->
+<!--					</div>-->
+<!--				</div>-->
 
-			  <button type="button" class="btn btn-primary" id="add-product">Add</button>
-			  &nbsp;
-			  <button type="button" class="btn btn-primary" id="refresh-data">Refresh</button>
-			  &nbsp;
-			  <button type="button" class="btn btn-primary" id="upload-data">Upload</button>
-			</form>
-	 </div>	
-</div> 
+
+<!--			</form>-->
+<!--		 <button type="button" class="btn btn-primary" id="add-product">Add</button>-->
+<!--		 &nbsp;-->
+<!--		 <button type="button" class="btn btn-primary" id="refresh-data">Refresh</button>-->
+<!--		 &nbsp;-->
+<!--		 <button type="button" class="btn btn-primary" id="upload-data">Upload</button>-->
+
+
+<!--	 </div>	-->
+<!--</div> -->
 
 
 <!-- Blank Row -->
@@ -174,6 +182,59 @@
     </div>
   </div>
 </div>
+
+	<!--	Add Product Modal -->
+	<!-- Modal -->
+	<div class="modal fade" id="addProduct" tabindex="-1" aria-labelledby="addProductLabel" aria-hidden="true">
+		<div class="modal-dialog">
+			<div class="modal-content">
+				<div class="modal-header">
+					<h4 class="modal-title" id="addBrandLabel">Add Brand-Category</h4>
+					<button type="button" class="close" data-dismiss="modal" aria-label="Close">
+						<span aria-hidden="true">&times;</span>
+					</button>
+				</div>
+				<div class="modal-body">
+					<form class="form-inline" id="product-form">
+						<div class="form-group">
+							<label for="inputBarcode" class="col-sm-2 col-form-label">Barcode</label>
+							<div class="col-sm-10">
+								<input type="text" class="form-control" name="barcode" id="inputBarcode" placeholder="enter barcode">
+							</div>
+						</div>
+						<div class="form-group">
+							<label for="inputBrand" class="col-sm-2 col-form-label">Brand Name</label>
+							<div class="col-sm-10">
+								<input type="text" class="form-control" name="brand" id="inputBrand" placeholder="enter brand Name">
+							</div>
+						</div>
+						<div class="form-group">
+							<label for="inputCategory" class="col-sm-2 col-form-label">Category</label>
+							<div class="col-sm-10">
+								<input type="text" class="form-control" name="category" id="inputCategory" placeholder="enter category">
+							</div>
+						</div>
+						<div class="form-group">
+							<label for="inputName" class="col-sm-2 col-form-label"> Product Name</label>
+							<div class="col-sm-10">
+								<input type="text" class="form-control" name="name" id="inputName" placeholder="enter product name">
+							</div>
+						</div>
+						<div class="form-group">
+							<label for="inputMrp" class="col-sm-2 col-form-label">Price (INR) </label>
+							<div class="col-sm-10">
+								<input type="number" class="form-control" name="mrp" id="inputMrp" placeholder="0.0">
+							</div>
+						</div>
+					</form>
+				</div>
+				<div class="modal-footer">
+					<button type="button" class="btn btn-primary" id="add-brand">Add</button>
+					<button type="button" class="btn btn-danger" data-dismiss="modal">Cancel</button>
+				</div>
+			</div>
+		</div>
+	</div>
 
 </div> <!-- Container end-->
 
