[update] - added reports for inventory and brand

--- a/src/main/webapp/html/brand.html
+++ b/src/main/webapp/html/brand.html
@@ -16,6 +16,8 @@
         <button type="button" class="btn btn-primary brand-header-child" id="upload-data">	Upload    <i class="fa fa-upload" ></i>
 		</button>
 	<button type="button" class="btn btn-primary brand-header-child" id="refresh-data">Refresh <i class="fa fa-refresh"></i></button>
+	<button type="button" class="btn btn-primary brand-header-child" id="filter-data" >Filter <i class="fa fa-filter"></i></button>
+
 </h3>
 
 
@@ -153,6 +155,60 @@
 	</div>
 
 </div>
+
+
+
+<!--	Brand Search Modal -->
+<!-- Modal -->
+<div class="modal fade" id="searchBrand" tabindex="-1" aria-labelledby="searchBrandLabel" aria-hidden="true">
+	<div class="modal-dialog">
+		<div class="modal-content">
+			<div class="modal-header">
+				<h4 class="modal-title" id="searchBrandLabel">Search</h4>
+				<button type="button" class="close" data-dismiss="modal" aria-label="Close">
+					<span aria-hidden="true">&times;</span>
+				</button>
+			</div>
+			<div class="modal-body">
+				<form class="form-inline" id="brand-search-form">
+					<div class="form-group">
+						<label for="inputBrandName" class="col-sm-2 col-form-label">Brand Name</label>
+						<div class="col-sm-10">
+							<input type="text" class="form-control" name="brand" id="inputBrandSearch" placeholder="enter name">
+						</div>
+					</div>
+					<div class="form-group">
+						<label for="inputCategoryName" class="col-sm-2 col-form-label">Category Name</label>
+						<div class="col-sm-10">
+							<input type="text" class="form-control" name="category" id="inputCategorySearch" placeholder="enter category name">
+						</div>
+					</div>
+<!--					<div class="form-group">-->
+<!--						<label for="inputBrandName" class="col-sm-2 col-form-label">Brand Name</label>-->
+<!--						<div class="col-sm-10">-->
+<!--							<select class="brand-select" multiple="multiple" style="width:50%;"></select>-->
+<!--						</div>-->
+<!--					</div>-->
+
+<!--					<div class="form-group">-->
+<!--						<label for="inputCategoryName" class="col-sm-2 col-form-label">Category Name</label>-->
+<!--						<div class="col-sm-10">-->
+<!--							<select class="brand-select" multiple="multiple" style="width:50%;"></select>-->
+<!--						</div>-->
+<!--					</div>-->
+
+				</form>
+			</div>
+			<div class="modal-footer">
+				<button type="button" class="btn btn-primary" id="search-brand-category">Filter</button>
+				<button type="button" class="btn btn-danger" data-dismiss="modal">Cancel</button>
+			</div>
+		</div>
+	</div>
+</div>
+
+</div>
+
 
 
 </div> <!-- Container end-->
