--- a/src/main/webapp/html/brand.html
+++ b/src/main/webapp/html/brand.html
@@ -81,7 +81,7 @@
 </div>
 
 
-<!-- Employee Edit Modal -->
+<!-- Brand Upload Modal -->
 <div class="modal" tabindex="-1" role="dialog" id="upload-brand-modal">
   <div class="modal-dialog" role="document">
     <div class="modal-content">
